Update Deep Vision: AI-Powered Hardware Classification.ipynb

--- a/Deep Vision: AI-Powered Hardware Classification.ipynb
+++ b/Deep Vision: AI-Powered Hardware Classification.ipynb
@@ -5,7 +5,7 @@
    "id": "57a06e59-d787-450f-aa9a-8d250e3e4d4a",
    "metadata": {},
    "source": [
-    "# PC Parts Images Dataset [Classification Problem]"
+    "# Deep Vision: AI-Powered Hardware Classification - Deep Learning Approach"
    ]
   },
   {
